--- a/index.html
+++ b/index.html
@@ -61,6 +61,102 @@
         <!-- top banner end  -->
      </header>
 
+     <main>
+      <!-- casual shoes section start  -->
+      <section class="container mt-5">
+        <h2>Casual shoes</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/image 5.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/Daco_1703273 1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/pngegg 1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- casual shoes section end -->
+
+      <!-- Formal shoes section start  -->
+      <section class="container mt-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg ">
+              <img src="images/Mask Group.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Prestige High-Cut Leather</h5>
+                <p class="card-text">This is a wider card with supporting text below as .</p>
+              </div>
+              <div class=" p-3 d-flex justify-content-between">
+                <h2>$234</h2>
+                <div class="btn btn-danger">BuyNow</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/Rectangle 38.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="p-3 d-flex justify-content-between">
+                <h2>$234</h2>
+                <div class="btn btn-danger">BuyNow</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/Rectangle 39.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in.</p>
+              </div>
+              <div class="p-3 d-flex justify-content-between">
+                <h2>$234</h2>
+                <div class="btn btn-danger">BuyNow</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Formal shoes section end  -->
+
+     </main>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
