--- a/index.html
+++ b/index.html
@@ -66,39 +66,45 @@
       <section class="container mt-5">
         <h2>Casual shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
+
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 border border-0 shadow-lg">
               <img src="images/image 5.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Nike Shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="p-3 d-flex justify-content-between">
+                <h2>$324</h2>
+                <div class="btn btn-danger">BuyNow</div>
               </div>
             </div>
           </div>
+
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 border border-0 shadow-lg">
               <img src="images/Daco_1703273 1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Sneakers Skate Shoe</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="p-3 d-flex justify-content-between">
+                <h2>$345</h2>
+                <div class="btn btn-danger">BuyNow</div>
               </div>
             </div>
           </div>
+
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 border border-0 shadow-lg">
               <img src="images/pngegg 1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Sneakers Basketball shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="p-3 d-flex justify-content-between">
+                <h2>$435</h2>
+                <div class="btn btn-danger">BuyNow</div>
               </div>
             </div>
           </div>
@@ -108,6 +114,7 @@
 
       <!-- Formal shoes section start  -->
       <section class="container mt-5">
+        <h2>Formal shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
 
           <div class="col">
