--- a/index.html
+++ b/index.html
@@ -162,6 +162,54 @@
       </section>
       <!-- Formal shoes section end  -->
 
+      <!-- categoris start  -->
+      <section class="container mt-5 mb-5">
+        <div class="row d-flex align-items-center justify-content-between">
+          <div class="col-5">
+            <div class="container ">
+              <div class="row g-2">
+
+                <div class="col-12">
+                  <div class="p-3 border bg-light row border border-0 shadow-lg rounded-4">
+                    <img class="col-4 w-25" src="icons/image 12.png" alt="">
+                    <div class="col-8">
+                      <h5>Find the Perfect Fit</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="p-3 border bg-light row border border-0 shadow-lg rounded-4">
+                    <img class="col-4 w-25" src="icons/image 12.png" alt="">
+                    <div class="col-8">
+                      <h5>Find the Perfect Fit</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="p-3 border bg-light row border border-0 shadow-lg rounded-4">
+                    <img class="col-4 w-25" src="icons/image 12.png" alt="">
+                    <div class="col-8">
+                      <h5>Find the Perfect Fit</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    </div>
+                  </div>
+                </div>
+                
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-7">
+              <img class="img-fluid" src="icons/XMLID 1.png" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- categoris end -->
+
      </main>
 
 
